[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragflow-uploader"
version = "0.1.0"
description = "A robust file uploader and processor for RAGFlow with advanced progress tracking"
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.66.1",
    "python-magic>=0.4.27",
    "python-magic-bin>=0.4.14; sys_platform == 'win32'",
    "watchdog>=3.0.0",
    "humanize>=4.9.0",
    "psutil>=5.9.8",
    "aiofiles>=23.2.1",
    "typing-extensions>=4.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "ruff>=0.1.9"
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B", "I", "UP"]

[project.scripts]
ragflow-uploader = "ragflow_uploader:main"
